# arduino-uno-car-app

./: README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
extends/: settings.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/serialport_plugin/: commands.rs  errors.rs  mod.rs  types.rs
src/components/: SensorData.vue  SerialConnect.vue  SerialText.vue  Setting.vue  SettingImport.vue
src/components/Home/: SensorData.vue  SerialConnect.vue  SerialText.vue  Setting.vue  SettingAlertSounds.vue  ValueShow.vue
src/components/setting/: AlertSounds.vue  SettingIndex.vue  ShortcutKey.vue  index.vue
src/constant/: events.ts  function.ts
src/store/: setting.ts
src/utils/: event.ts  format.ts  index.ts  parse.ts  serial-uno.ts  serial-vue.ts  serial.ts  string.ts  utils.ts
src/views/: Home.vue
