[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["a3510377"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = [
  "global-shortcut-all",
  "updater",
  "window-set-always-on-top",
  "fs-all",
  "shell-open",
  "devtools"
] }
serialport = { version = "4.4.0", features = ["serde"] }
serde_json = "1"
async-std = "1.12.0"
regex = "1.10.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
